--- a/FirstProjectASP/wwwroot/css/site.css
+++ b/FirstProjectASP/wwwroot/css/site.css
@@ -18,5 +18,11 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  background-image: url('/images/background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: #ffffff;
 }
